# qq-reminder-bot

./: .env.example  .gitignore  DEPLOY.md  README.md  VERSION.md  bot.py  pyproject.toml  start.ps1  sts_knowledge_seed.py
config/: bot_persona_prompt.txt
deploy/nginx/: hunterbot-admin-console.conf
knowledge_sources/sts2_guides/: main_1.tex
plugins/: access_control.py  ai_chat.py  chime_service.py  companion_admin.py  companion_memory.py  companion_registry.py  daily_report.py  group_reactions.py  media_insights.py  message_archive.py  message_collector.py  reminder.py  reminder_service.py  storage_status.py
plugins/admin_console/: __init__.py
plugins/admin_console/static/: app.js  index.html  style.css
scripts/: install-hunterbot-console-startup.ps1  start-hunterbot-console-tunnel.ps1
