[project]
name = "qq-reminder-bot"
version = "1.1.0"
description = "A small QQ reminder bot built with NoneBot2 and OneBot v11."
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "apscheduler>=3.10.4",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot"]
packages = ["plugins"]

[tool.nonebot]
plugins = [
    "plugins.access_control",
    "plugins.companion_registry",
    "plugins.companion_memory",
    "plugins.companion_admin",
    "plugins.message_archive",
    "plugins.reminder",
    "plugins.ai_chat",
    "plugins.message_collector",
    "plugins.storage_status",
    "plugins.media_insights",
]
