[project]
name = "qq-reminder-bot"
version = "2.0.0"
description = "HunterBot, a QQ assistant with AI agent tools, reminders, reports, memory, and an admin console."
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "apscheduler>=3.10.4",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "reportlab>=4.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot"]
packages = ["plugins", "plugins.admin_console"]

[tool.setuptools.package-data]
"plugins.admin_console" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.nonebot]
plugins = [
    "plugins.access_control",
    "plugins.companion_registry",
    "plugins.companion_memory",
    "plugins.admin_console",
    "plugins.message_archive",
    "plugins.reminder",
    "plugins.ai_chat",
    "plugins.group_reactions",
    "plugins.message_collector",
    "plugins.storage_status",
    "plugins.media_insights",
    "plugins.daily_report",
]
